--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
 </head>
 
 <body>
+    <section class="calculator">
+
+        <section class="calculator-display">
+            <div class="display"></div>
+        </section>
+
+        <section class="calculator-buttons">
+            <section class="calculator-numbers">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+            </section>
+
+            <section class="calculator-operators">
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+                <button>=</button>
+            </section>
+        </section>
+
+
+    </section>
 
 
 
