styling hover and active states

--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="calculator">
 
         <section class="calculator-display">
-            <div class="display"></div>
+            <div class="display">1 + 1 = 2</div>
         </section>
 
         <section class="calculator-buttons">
             <section class="calculator-numbers">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button value="1">1</button>
+                <button value="2">2</button>
+                <button value="3">3</button>
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
+                <button>C</button>
+                <button>esc</button>
+                <button>=</button>
             </section>
 
             <section class="calculator-operators">
@@ -33,7 +39,6 @@
                 <button>-</button>
                 <button>*</button>
                 <button>/</button>
-                <button>=</button>
             </section>
         </section>
 
