Clear button and equalbutton logic finished.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="calculator">
 
         <section class="calculator-display">
-            <div class="display">1 + 1 = 2</div>
+            <div class="display">Calculator</div>
         </section>
 
         <section class="calculator-buttons">
