--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
 </head>
 
 <body>
-    <section class="calculator">
+    <div class="calculator-wrapper">
+        <section class="calculator">
 
-        <section class="calculator-display">
-            <div class="display">Calculator</div>
-        </section>
-
-        <section class="calculator-buttons">
-            <section class="calculator-numbers">
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="C">C</button>
-                <button value="esc">esc</button>
-                <button value="=">=</button>
+            <section class="calculator-display">
+                <div class="display">Calculator</div>
             </section>
 
-            <section class="calculator-operators">
-                <button value="+">+</button>
-                <button value="-">-</button>
-                <button value="*">*</button>
-                <button value="/">/</button>
+            <section class="calculator-buttons">
+                <section class="calculator-numbers">
+                    <button value="1">1</button>
+                    <button value="2">2</button>
+                    <button value="3">3</button>
+                    <button value="4">4</button>
+                    <button value="5">5</button>
+                    <button value="6">6</button>
+                    <button value="7">7</button>
+                    <button value="8">8</button>
+                    <button value="9">9</button>
+                    <button value="0">0</button>
+                    <button value="C">C</button>
+                    <button value="=">=</button>
+                </section>
+
+                <section class="calculator-operators">
+                    <button value="+">+</button>
+                    <button value="-">-</button>
+                    <button value="*">*</button>
+                    <button value="/">/</button>
+                </section>
             </section>
-        </section>
+    </div>
 
 
     </section>
