--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     <button value="8">8</button>
                     <button value="9">9</button>
                     <button value="0">0</button>
-                    <button value="C">C</button>
-                    <button value="=">=</button>
+                    <button value="." class="decimal-button">.</button>
+                    <button value="backspace">DEL</button>
+                    <button value="C" id="clear-button">C</button>
+                    <button value="=" class="equal-button" id="equal-button">=</button>
                 </section>
 
                 <section class="calculator-operators">
